refactor(app): extract models
