# docs/source/_static/openapi_v2.yaml
@@ -1,18 +1,18 @@
 components:
   schemas:
-    EchoResponse:
+    Echo:
       description: Response model for echo endpoint.
       properties:
-        message:
-          description: The message content
+        text:
+          description: The echo
           examples:
-          - Hello, world!
+          - HELLO, WORLD!
           minLength: 1
-          title: Message
+          title: Text
           type: string
       required:
-      - message
-      title: EchoResponse
+      - text
+      title: Echo
       type: object
     HTTPValidationError:
       properties:
@@ -32,36 +32,30 @@ components:
           - type: 'null'
           title: Reason
         status:
-          $ref: '#/components/schemas/_HealthStatus'
+          $ref: '#/components/schemas/HealthStatus'
       required:
       - status
       title: Health
       type: object
-    HelloWorldResponse:
-      description: Response model for hello-world endpoint.
-      properties:
-        message:
-          description: The hello world message
-          examples:
-          - Hello, world!
-          title: Message
-          type: string
-      required:
-      - message
-      title: HelloWorldResponse
-      type: object
+    HealthStatus:
+      description: Health status enumeration.
+      enum:
+      - UP
+      - DOWN
+      title: HealthStatus
+      type: string
     Utterance:
-      description: Request model for echo endpoint.
+      description: Model representing a text utterance.
       properties:
-        utterance:
+        text:
           description: The utterance to echo back
           examples:
           - Hello, world!
           minLength: 1
-          title: Utterance
+          title: Text
           type: string
       required:
-      - utterance
+      - text
       title: Utterance
       type: object
     ValidationError:
@@ -85,13 +79,19 @@ components:
       - type
       title: ValidationError
       type: object
-    _HealthStatus:
-      description: Health status enumeration.
-      enum:
-      - UP
-      - DOWN
-      title: _HealthStatus
-      type: string
+    _HelloWorldResponse:
+      description: Response model for hello-world endpoint.
+      properties:
+        message:
+          description: The hello world message
+          examples:
+          - Hello, world!
+          title: Message
+          type: string
+      required:
+      - message
+      title: _HelloWorldResponse
+      type: object
 info:
   contact:
     email: helmuthva@gmail.com
@@ -104,10 +104,11 @@ openapi: 3.1.0
 paths:
   /echo:
     post:
-      description: "Echo back the provided utterance.\n\nArgs:\n    request (Utterance):\
-        \ The request containing the utterance to echo back.\n\nReturns:\n    EchoResponse:\
-        \ A response containing the echoed utterance.\n\nRaises:\n    422 Unprocessable\
-        \ Entity: If utterance is not provided or empty."
+      description: "Echo back the provided utterance.\n\nArgs:\n    request 
+(Utterance):\
+        \ The utterance to echo back.\n\nReturns:\n    Echo: The 
+echo.\n\nRaises:\n\
+        \    422 Unprocessable Entity: If utterance is not provided or empty."
       operationId: echo_v2_echo_post
       requestBody:
         content:
@@ -120,7 +121,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/EchoResponse'
+                $ref: '#/components/schemas/Echo'
           description: Successful Response
         '422':
           content:
@@ -133,12 +134,18 @@ paths:
       - Basics
   /health:
     get:
-      description: "Check the health of the service.\n\nThis endpoint returns the\
-        \ health status of the service.\nThe health status can be either UP or DOWN.\n\
-        If the service is healthy, the status will be UP.\nIf the service is unhealthy,\
-        \ the status will be DOWN and a reason will be provided.\nThe response will\
-        \ have a 200 OK status code if the service is healthy,\nand a 500 Internal\
-        \ Server Error status code if the service is unhealthy.\n\nReturns:\n    Health:\
+      description: "Check the health of the service.\n\nThis endpoint returns 
+the\
+        \ health status of the service.\nThe health status can be either UP or 
+DOWN.\n\
+        If the service is healthy, the status will be UP.\nIf the service is 
+unhealthy,\
+        \ the status will be DOWN and a reason will be provided.\nThe response 
+will\
+        \ have a 200 OK status code if the service is healthy,\nand a 500 
+Internal\
+        \ Server Error status code if the service is unhealthy.\n\nReturns:\n   
+Health:\
         \ The health status of the service."
       operationId: health_health_get
       responses:
@@ -153,12 +160,18 @@ paths:
       - Observability
   /healthz:
     get:
-      description: "Check the health of the service.\n\nThis endpoint returns the\
-        \ health status of the service.\nThe health status can be either UP or DOWN.\n\
-        If the service is healthy, the status will be UP.\nIf the service is unhealthy,\
-        \ the status will be DOWN and a reason will be provided.\nThe response will\
-        \ have a 200 OK status code if the service is healthy,\nand a 500 Internal\
-        \ Server Error status code if the service is unhealthy.\n\nReturns:\n    Health:\
+      description: "Check the health of the service.\n\nThis endpoint returns 
+the\
+        \ health status of the service.\nThe health status can be either UP or 
+DOWN.\n\
+        If the service is healthy, the status will be UP.\nIf the service is 
+unhealthy,\
+        \ the status will be DOWN and a reason will be provided.\nThe response 
+will\
+        \ have a 200 OK status code if the service is healthy,\nand a 500 
+Internal\
+        \ Server Error status code if the service is unhealthy.\n\nReturns:\n   
+Health:\
         \ The health status of the service."
       operationId: health_healthz_get
       responses:
@@ -173,7 +186,8 @@ paths:
       - Observability
   /hello-world:
     get:
-      description: "Return a hello world message.\n\nReturns:\n    HelloWorldResponse:\
+      description: "Return a hello world message.\n\nReturns:\n    
+_HelloWorldResponse:\
         \ A response containing the hello world message."
       operationId: hello_world_hello_world_get
       responses:
@@ -181,7 +195,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/HelloWorldResponse'
+                $ref: '#/components/schemas/_HelloWorldResponse'
           description: Successful Response
       summary: Hello World
       tags:
